--- a/map_beta.html
+++ b/map_beta.html
@@ -2,31 +2,59 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8" />
-    <title>京王線 運用表示 Ver.1.7</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <title>京王線 リアルタイム配線図 (新宿-明大前)</title>
     <script src="unyo_kt.js"></script>
     <style>
         :root { --bg: #0f0f0f; --accent: #58a6ff; }
-        body { margin: 0; background: var(--bg); color: #fff; font-family: sans-serif; overflow: hidden; }
-        header { height: 50px; padding: 0 15px; background: rgba(0,0,0,0.9); display: flex; align-items: center; border-bottom: 1px solid #333; position: fixed; top: 0; width: 100%; z-index: 1000; }
-        .map-wrapper { position: absolute; top: 50px; bottom: 0; left: 0; right: 0; overflow: auto; background: #000; }
+        body { margin: 0; background: var(--bg); color: #fff; font-family: 'Helvetica Neue', Arial, sans-serif; overflow: hidden; }
+        header {
+            height: 50px; padding: 0 15px; background: rgba(0,0,0,0.9);
+            display: flex; align-items: center; border-bottom: 1px solid #333;
+            position: fixed; top: 0; width: 100%; z-index: 1000;
+        }
+        .map-wrapper {
+            position: absolute; top: 50px; bottom: 0; left: 0; right: 0;
+            overflow: auto; -webkit-overflow-scrolling: touch; background: #000;
+        }
         .map-content { position: relative; width: 1200px; height: 675px; }
-        .map-img { position: absolute; top: 0; left: 0; width: 1200px; height: 675px; pointer-events: none; }
-        .train { position: absolute; width: 26px; height: 16px; border-radius: 2px; border: 1.5px solid #fff; transform: translate(-50%, -50%); z-index: 100; transition: all 1.5s linear; box-shadow: 0 0 8px #000; }
-        .train-label { position: absolute; top: 50%; transform: translateY(-50%); background: rgba(0,0,0,0.85); color: #fff; padding: 2px 6px; border-radius: 4px; font-size: 10px; font-weight: bold; white-space: nowrap; display: flex; gap: 4px; border: 1px solid #444; }
+        .map-img { position: absolute; top: 0; left: 0; width: 1200px; height: 675px; display: block; pointer-events: none; }
+        .train {
+            position: absolute; width: 26px; height: 16px;
+            border-radius: 2px; border: 1.5px solid #fff;
+            transform: translate(-50%, -50%); z-index: 100;
+            transition: all 1.5s cubic-bezier(0.4, 0, 0.2, 1);
+            box-shadow: 0 0 10px rgba(0,0,0,0.8);
+            display: flex; align-items: center; justify-content: center;
+        }
+        .train-label {
+            position: absolute; top: 50%; transform: translateY(-50%);
+            background: rgba(0,0,0,0.85); color: #fff; padding: 2px 7px; border-radius: 4px;
+            font-size: 10px; font-weight: bold; white-space: nowrap;
+            display: flex; flex-direction: row; align-items: center; gap: 5px; 
+            border: 1px solid #444; pointer-events: none; z-index: 110;
+        }
         .label-nobori { right: 100%; margin-right: 8px; }
         .label-kudari { left: 100%; margin-left: 8px; }
-        .unyo-no { color: #ffeb3b; }
+        .delay-text { color: #ff4444; font-weight: 900; }
         .car-model { color: #00ffcc; font-size: 9px; }
-        .dest-text { background: #333; padding: 0 2px; }
+        .unyo-no { color: #ffeb3b; }
+        .car-sr { color: #aaa; font-size: 9px; } 
+        .dest-text { color: #fff; background: #333; padding: 0 3px; border-radius: 2px; } 
+        .sy-1 { background-color: #ff4c7c; } .sy-2 { background-color: #00b66a; } .sy-3 { background-color: #0082ff; }
+        .sy-5 { background-color: #d8d100; color: #000; } .sy-6 { background-color: #888; } .sy-9, .sy-11 { background-color: #c71585; }
     </style>
 </head>
 <body>
+
 <header>
-    <div style="font-size:14px; font-weight:bold;">京王線 リアルタイム運用モニター</div>
-    <div id="status" style="margin-left:auto; font-size:11px; color:#aaa;">読込中...</div>
+    <a href="index.html" style="color:var(--accent); text-decoration:none; margin-right:15px; font-size:13px;">← 一覧に戻る</a>
+    <h1 style="font-size:14px; margin:0;">京王線 リアルタイム配線図 (新宿-明大前)</h1>
+    <div id="status" style="margin-left:auto; font-size:11px; color:#aaa;">接続中...</div>
 </header>
+
 <div class="map-wrapper">
-    <div class="map-content">
+    <div class="map-content" id="mapContent">
         <img src="image.png" class="map-img">
         <div id="trainLayer"></div>
     </div>
@@ -34,6 +62,8 @@
 
 <script>
 const FEED_URL = "https://i.opentidkeio.jp/data/traffic_info.json";
+
+// すべての座標データを1つも漏らさず記述（E008_10 含む）
 const posCoords = {
     "E001_1": {x: 149, y: 135}, "E001_2": {x: 149, y: 163}, "E001_3": {x: 149, y: 191},
     "D002":   {x: 366, y: 163}, "U001":   {x: 366, y: 191},
@@ -65,8 +95,8 @@ const posCoords = {
 };
 
 function getCarModel(sk) {
-    const m = { "2":"2000", "5":"5000", "7":"7000", "8":"8000", "9":"9000", "0":"10-300" };
-    return m[String(sk)] || "";
+    const models = { "2":"2000", "5":"5000", "7":"7000", "8":"8000", "9":"9000", "0":"10-300" };
+    return models[String(sk)] || "";
 }
 
 function getDestName(ik) {
@@ -74,7 +104,7 @@ function getDestName(ik) {
     return d[String(ik)] || ik;
 }
 
-// 運用取得
+// unyo_kt.js で生成された逆引きテーブルを参照
 function getUnyo(tr) {
     return (window.trToUnyo && window.trToUnyo[String(tr)]) ? window.trToUnyo[String(tr)] : "--";
 }
@@ -111,23 +141,29 @@ async function update() {
                     el.style.left = (pos.x + offset) + "px";
                     el.style.top = pos.y + "px";
 
-                    const dir = (String(p.ki) === "1") ? "label-nobori" : "label-kudari";
+                    const dirClass = (String(p.ki) === "1") ? "label-nobori" : "label-kudari";
+                    const delayHtml = (p.dl && parseInt(p.dl) > 0) ? `<span class="delay-text">+${p.dl}</span>` : "";
+
                     el.innerHTML = `
-                        <div class="train-label ${dir}">
+                        <div class="train-label ${dirClass}">
                             <span class="car-model">${getCarModel(p.sk)}</span>
                             <span class="unyo-no">${getUnyo(p.tr)}</span>
+                            <span class="car-sr">${p.sr ? p.sr + '両' : ''}</span>
                             <span class="dest-text">${getDestName(p.ik_tr)}</span>
                             <span>${p.tr}</span>
+                            ${delayHtml}
                         </div>`;
                 }
             });
         });
+
         document.querySelectorAll('.train').forEach(e => {
             if (!activeIds.has(e.id.replace('tr-', ''))) e.remove();
         });
-        document.getElementById('status').textContent = "更新: " + new Date().toLocaleTimeString();
+        document.getElementById('status').textContent = "最終更新: " + new Date().toLocaleTimeString();
     } catch (e) { console.error(e); }
 }
+
 setInterval(update, 2000);
 update();
 </script>
