--- a/map_beta.html
+++ b/map_beta.html
@@ -2,8 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8" />
-    <title>京王線 ライブ配線図モニター 完全版</title>
-    <script src="unyo_kt.js"></script>
+    <title>京王線 ライブ配線図モニター【真・完全版】</title>
     <style>
         :root { --bg: #0f0f0f; }
         body { margin: 0; background: var(--bg); color: #fff; font-family: sans-serif; overflow: hidden; }
@@ -11,13 +10,16 @@
         .map-wrapper { position: absolute; top: 50px; bottom: 0; left: 0; right: 0; overflow: auto; background: #000; }
         .map-content { position: relative; width: 1200px; height: 675px; }
         .map-img { position: absolute; top: 0; left: 0; width: 1200px; height: 675px; pointer-events: none; }
+        /* 列車アイコン */
         .train { position: absolute; width: 26px; height: 16px; border-radius: 2px; border: 1.5px solid #fff; transform: translate(-50%, -50%); z-index: 100; transition: all 1.5s linear; box-shadow: 0 0 10px #000; display: flex; align-items: center; justify-content: center; }
-        .train-label { position: absolute; top: 50%; transform: translateY(-50%); background: rgba(0,0,0,0.85); color: #fff; padding: 2px 7px; border-radius: 4px; font-size: 10px; font-weight: bold; white-space: nowrap; display: flex; align-items: center; gap: 5px; border: 1px solid #444; pointer-events: none; }
+        /* 吹き出しラベル */
+        .train-label { position: absolute; top: 50%; transform: translateY(-50%); background: rgba(0,0,0,0.85); color: #fff; padding: 2px 7px; border-radius: 4px; font-size: 10px; font-weight: bold; white-space: nowrap; display: flex; align-items: center; gap: 5px; border: 1px solid #444; pointer-events: none; z-index: 110; }
         .label-nobori { right: 100%; margin-right: 8px; }
         .label-kudari { left: 100%; margin-left: 8px; }
         .unyo-no { color: #ffeb3b; }
         .car-model { color: #00ffcc; font-size: 9px; }
         .dest-text { background: #333; padding: 0 3px; border-radius: 2px; }
+        /* 種別色（特急・急行・各停・ライナー） */
         .sy-1 { background-color: #ff4c7c; } .sy-2 { background-color: #00b66a; } .sy-3 { background-color: #0082ff; }
         .sy-5 { background-color: #d8d100; color: #000; } .sy-6 { background-color: #888; } .sy-9, .sy-11 { background-color: #c71585; }
     </style>
@@ -25,8 +27,8 @@
 <body>
 
 <header>
-    <h1 style="font-size:14px; margin:0;">京王線 運用モニター (新宿-明大前)</h1>
-    <div id="status" style="margin-left:auto; font-size:11px; color:#aaa;">読込中...</div>
+    <h1 style="font-size:14px; margin:0;">京王線 リアルタイム配線図 (新宿-明大前)</h1>
+    <div id="status" style="margin-left:auto; font-size:11px; color:#aaa;">データ同期中...</div>
 </header>
 
 <div class="map-wrapper">
@@ -37,8 +39,11 @@
 </div>
 
 <script>
-// --- 1. 全座標リスト (45箇所) ---
+// ==========================================
+// 1. 全座標データ (45箇所・一字一句漏らさず)
+// ==========================================
 const posCoords = {
+    // 新宿・新線新宿・新宿三丁目方面
     "E001_1": {x: 149, y: 135}, "E001_2": {x: 149, y: 163}, "E001_3": {x: 149, y: 191},
     "D002":   {x: 366, y: 163}, "U001":   {x: 366, y: 191},
     "E002_1": {x: 680, y: 65},  "E002_2": {x: 680, y: 91},  "E002_3S": {x: 680, y: 120}, "E002_4": {x: 680, y: 146},
@@ -52,6 +57,7 @@ const posCoords = {
     "E003_1": {x: 893, y: 91},  "E003_2": {x: 893, y: 120},
     "D004":   {x: 976, y: 91},  "U003":   {x: 976, y: 120},
     "E004_1": {x: 1053, y: 91}, "E004_2": {x: 1053, y: 120},
+    // 笹塚・代田橋・明大前エリア
     "D005":   {x: 55,  y: 322}, "U004":   {x: 1145, y: 120},
     "E005_1": {x: 145, y: 322}, "E005_2": {x: 145, y: 351},
     "D006":   {x: 230, y: 322}, "U005":   {x: 230, y: 351},
@@ -68,32 +74,76 @@ const posCoords = {
     "E011_1": {x: 1122, y: 322}, "E011_2": {x: 1122, y: 351}
 };
 
-// --- 2. 行き先リスト (全コード復元) ---
-function getDestName(ik) {
-    const d = { 
-        "001":"新", "033":"N", "002":"笹", "003":"明", "006":"桜", "010":"烏", "012":"つ", "016":"調", 
-        "018":"飛", "021":"東", "022":"府", "027":"高", "031":"北", "032":"八", "036":"馬", "037":"動", 
-        "042":"尾", "043":"山", "048":"若", "050":"セ", "052":"沢", "054":"橋", "101":"市", "107":"岩", 
-        "112":"住", "114":"島", "118":"瑞", "120":"本" 
-    };
-    return d[String(ik)] || ik;
+// ==========================================
+// 2. 運用データ (unyo_kt.jsの内容をここに統合)
+// ==========================================
+const unyoData = {
+  "1T": ["5803","5802","4807","2802"],
+  "3T": ["5805","5804","4809","2804","5873","5872","5889","5888","5805A","6909","6918","5847A","5842A"],
+  "5T": ["5801","5800","5817","5816","5851","5850","4839","4844","4861","4868","5839A","5836A","5857A","5852A","5873A","5868A"],
+  "7T": ["6901","6906","4803","4818"],
+  "9T": ["6900","4801","5712"],
+  "11T": ["6902","5807","5806","5825","5826","5859","5802A","5819A","5820A","5845A","1904"],
+  "13T": ["5811","5810","5837","5838","1905","5862","5879","5878","4857","4862","4881","1810","6926","5861A","5856A","5879A","5872A"],
+  "15T": ["5813","5812","4821","4830","4847","4852","5811A","5812A","5835A","5832A","4897","4806A"],
+  "17T": ["5815","5814","4823","2812","5883","5882","5899","5898","5815A","5816A","4885","4894"],
+  "19T": ["5819","5818","5711","6708"],
+  "21T": ["5821","5822","1803","6706","4866","5837A","5834A"],
+  "23T": ["5823","5824","5857","5856","4841","4846","4863","2848","5843A","5840A","4803A"],
+  "25T": ["5827","5828","2801","4836","4853","4858","5821A","1900","4887","4892"],
+  "27T": ["6908","5829","5830"],
+  "29T": ["5833","5834","5863","6763","2850"],
+  "31T": ["1901","5820","5855","5854","2809","2824","2829","4864","5833A","5830A"],
+  "33T": ["4815","6769","2706","6781","4888","5867A","5862A","5885A","5878A"],
+  "35T": ["6903","1801","6723","4824"],
+  "37T": ["4817","4828","4845","4850","2835","4874"],
+  "39T": ["6910","4819","2808","5877","5876","5893","5892","5809A","5810A","5831A","5828A","6925","1821","6799","4804A"],
+  "41T": ["6912","5849","5848","2807","2822","2827","2842","6913","1809","4884","4807A","4810A"],
+  "51T": ["6601","5008","4833","4838","4855","4860","5825A","5822A","6923","1819","6797","4800A"],
+  "53T": ["5704","5831","5832","4831","2816","5887","5886","5803A","5804A","4877","1806","6922"],
+  "55T": ["4822"],
+  "57T": ["4873","1804","5855A","5850A","5869A","5864A","5887A","5880A","5629"],
+  "59T": ["2841","4882","5859A","5854A"],
+  "61T": ["6911","1807","6775","1808","6924","4805A","4808A","6927"],
+  "63T": ["5827A","5824A","5851A","5846A","5863A","5858A","5881A","5874A"],
+  "65T": ["5829A","1902","5849A","5844A","4809A","2854"],
+  "67T": ["1907","5826A","4891","4898","5877A","5870A","6929"],
+
+  "61K": ["2800","4805","4820","4837","4842","5897","5896","4871","1802","6920","4893","4802A","2843","6762"],
+  "63K": ["6701","4700","5701","4812","4827","4834","4851","4856","4875","4880","4899"],
+  "65K": ["6707","4802","5839","5840","5865","5864","5881","5880","4859","2844","6915","1811","6783","2714","6795"],
+  "67K": ["5700","5703","1800","6914","4829","2814","2819","2834","5813A","5814A","4883","1812","6928","5865A","5860A","5883A","5876A"],
+  "69K": ["4800","5835","5836","2803","2818","5891","5890","4867","4872","4889"],
+  "71K": ["6715","4810","5853","5852","5871","5870","2821","2836","6905","6916","6917","1813","6787","2716","6135","5106A","5233"],
+  "73K": ["6709","4804","5843","5844","2805","2820","2825","2840","5823A","6773","2710","6131","5194","0777","6707A","2722","2703"],
+  "75K": ["4806","5845","5846","5869","5868","5885","5884","5801A","5800A","5817A","5818A","6919","1815","4890","5871A","5866A","5721"],
+  "77K": ["6713","4808","4825","4832","4849","4854","2839","4878","4895","2852"],
+  "79K": ["4814","5861","5860","2813","2828","2833","4870","6921","1817","6791","4896","5875A","0219","6035","6030"],
+  "81K": ["6904","5809","5808","4811","4826","2811","2826","2831","2846","5841A","5838A","4801A","2720","6758"],
+  "83K": ["4813","2805","4843","4848","4865","6765","2702","0093","0080","0013A","0090","0205","6021","6020","0214","0221","6037","6032"],
+  "85K": ["5100","5847","6729","2810","2815","2830","5807A","5808A","4879","2712","6133","5102A","5229"],
+  "87K": ["6005","6004","0204","4703","4816","1903","5858","5875","5874","2823","2838","6907","1805","6771","2708","6785","1814","6930","4815A","6754"],
+  "89K": ["5206","5841","5842","4835","4840","5895","5894","2837","2704","6779","4886","4811A"],
+  "91K": ["6117","5108","5867","5866","2817","2832","4869","4876","5853A","5848A","4813A"]
+};
+
+// 逆引きテーブル生成
+const trToUnyo = {};
+for (const [u, list] of Object.entries(unyoData)) {
+    list.forEach(tr => { trToUnyo[String(tr)] = u; });
 }
 
-function getCarModel(sk) {
-    const m = { "2":"2000", "5":"5000", "7":"7000", "8":"8000", "9":"9000", "0":"10-300" };
-    return m[String(sk)] || "";
-}
+// ==========================================
+// 3. 行き先・形式・ロジック
+// ==========================================
+const getDestName = (ik) => ({
+    "001":"新", "033":"N", "002":"笹", "003":"明", "006":"桜", "010":"烏", "012":"つ", "016":"調", 
+    "018":"飛", "021":"東", "022":"府", "027":"高", "031":"北", "032":"八", "036":"馬", "037":"動", 
+    "042":"尾", "043":"山", "048":"若", "050":"セ", "052":"沢", "054":"橋", "101":"市", "107":"岩", 
+    "112":"住", "114":"島", "118":"瑞", "120":"本"
+}[String(ik)] || ik);
 
-function getUnyo(tr) {
-    const trStr = String(tr);
-    if (window.trToUnyo && window.trToUnyo[trStr]) return window.trToUnyo[trStr];
-    if (window.unyoData) {
-        for (const [u, list] of Object.entries(window.unyoData)) {
-            if (list.includes(trStr)) return u;
-        }
-    }
-    return "--";
-}
+const getCarModel = (sk) => ({ "2":"2000", "5":"5000", "7":"7000", "8":"8000", "9":"9000", "0":"10-300" }[String(sk)] || "");
 
 async function update() {
     try {
@@ -113,7 +163,7 @@ async function update() {
                 if (pos) {
                     activeIds.add(p.tr);
                     const cKey = `${pos.x}_${pos.y}`;
-                    const offset = (counter[cKey] || 0) * 10;
+                    const offset = (counter[cKey] || 0) * 12; // 重なり防止
                     counter[cKey] = (counter[cKey] || 0) + 1;
 
                     let el = document.getElementById(`tr-${p.tr}`);
@@ -128,10 +178,12 @@ async function update() {
                     el.style.top = pos.y + "px";
 
                     const dir = (String(p.ki) === "1") ? "label-nobori" : "label-kudari";
+                    const unyo = trToUnyo[String(p.tr)] || "--";
+
                     el.innerHTML = `
                         <div class="train-label ${dir}">
                             <span class="car-model">${getCarModel(p.sk)}</span>
-                            <span class="unyo-no">${getUnyo(p.tr)}</span>
+                            <span class="unyo-no">${unyo}</span>
                             <span class="dest-text">${getDestName(p.ik_tr)}</span>
                             <span>${p.tr}</span>
                         </div>`;
@@ -145,10 +197,8 @@ async function update() {
     } catch (e) { console.error(e); }
 }
 
-window.onload = () => {
-    update();
-    setInterval(update, 2000);
-};
+setInterval(update, 2000);
+update();
 </script>
 </body>
 </html>
